@@ -1,2 +1,0 @@
-GooCanvasmm are the C++ bindings for GooCanvas which is a canvas widget for
-GTK+ that uses the cairo 2D library for drawing.
